Further optimizations to destroyables
Signed-off-by: Pablo Herrera <pabloherrerapalacio@gmail.com>